--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,21 @@
+alembic==1.0.0
 Click==7.0
 Flask==1.0.2
+flask-marshmallow==0.9.0
+Flask-Migrate==2.2.1
+Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
 itsdangerous==0.24
 Jinja2==2.10
+Mako==1.0.7
 MarkupSafe==1.0
+marshmallow==2.16.3
+marshmallow-sqlalchemy==0.14.1
 psycopg2-binary==2.7.5
+python-dateutil==2.7.3
 python-dotenv==0.9.1
+python-editor==1.0.3
+six==1.11.0
+SQLAlchemy==1.2.12
 Werkzeug==0.14.1
 WTForms==2.2.1
