--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 alembic==1.0.2
 Click==7.0
 Flask==1.0.2
+Flask-Login==0.4.1
 flask-marshmallow==0.9.0
 Flask-Migrate==2.2.1
 Flask-SQLAlchemy==2.3.2
