--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 alembic==1.0.2
 Click==7.0
 Flask==1.0.2
+flask-heroku==0.1.9
 Flask-Login==0.4.1
 flask-marshmallow==0.9.0
 Flask-Migrate==2.2.1
 Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
+gunicorn==19.9.0
 itsdangerous==1.1.0
 Jinja2==2.10
 Mako==1.0.7
