--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ flask-heroku==0.1.9
 Flask-Login==0.4.1
 flask-marshmallow==0.9.0
 Flask-Migrate==2.2.1
+Flask-SendGrid==0.6
 Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
 gunicorn==19.9.0
@@ -18,6 +19,8 @@ psycopg2-binary==2.7.5
 python-dateutil==2.7.5
 python-dotenv==0.9.1
 python-editor==1.0.3
+python-http-client==3.1.0
+sendgrid==5.6.0
 six==1.11.0
 SQLAlchemy==1.2.10
 Werkzeug==0.14.1
